bin/testsuite/tests/compiler/src/errors/compiler5114.swg
#global testerror "Err0643"

struct A {}
impl A
{
    mtd(x: s32, t: s32) opVisit() {}
}
